<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:padding="@dimen/dimen32"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_welcome_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen32"
        android:contentDescription="@string/login_img_desc" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_txt_username"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_txt_password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginBottom="@dimen/dimen16"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_login"
        style="@style/CommonButtonBlue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen12"
        android:text="@string/login_or"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font18"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_facebook_connect"
        android:drawableLeft="@drawable/ic_welcome_fb_login"
        android:drawableStart="@drawable/ic_welcome_fb_login"
        android:paddingHorizontal="@dimen/dimen64"
        android:layout_marginBottom="@dimen/dimen16"
        style="@style/CommonButtonBlue"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen4"
            android:layout_marginEnd="@dimen/dimen4"
            android:text="@string/login_no_account"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_register"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>