<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen24"
    android:background="@color/lightBlue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ThanksActivity">

    <TextView
        style="@style/CommonTextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen12"
        android:text="@string/verify_txt_header2" />

    <TextView
        style="@style/CommonTextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/verify_txt_body2" />

    <EditText
        android:id="@+id/verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen32"
        android:textAlignment="center"
        android:hint="@string/verify_txt_input"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen16"
        android:text="@string/verify_btn_send"
        style="@style/CommonButtonBlue"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen4"
            android:layout_marginEnd="@dimen/dimen4"
            android:text="@string/verify_txt_resend"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_btn_resend"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>