<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <Toolbar
        android:id="@+id/regis_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen48"
        android:background="@drawable/ic_header">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen36"
            android:src="@drawable/ic_header_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_register"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen24">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8"
                android:autofillHints="@string/register_txt_username"
                android:hint="@string/register_txt_username"
                android:inputType="textCapWords" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8"
                android:autofillHints="@string/register_txt_email"
                android:hint="@string/register_txt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8"
                android:autofillHints="@string/register_txt_phone"
                android:hint="@string/register_txt_phone"
                android:inputType="number" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/register_radio_male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_radio_female" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/bloodType"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/blood_type"/>

                <Spinner
                    android:id="@+id/reshus"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/reshus" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8"
                android:autofillHints="@string/register_txt_password"
                android:hint="@string/register_txt_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8"
                android:autofillHints="@string/register_txt_re_password"
                android:hint="@string/register_txt_re_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/register_radio_personal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_radio_organization" />
            </RadioGroup>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen8"
                android:entries="@array/jobs" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/register_txt_address"
                android:hint="@string/register_txt_address"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/register_txt_location"
                android:drawableEnd="@drawable/ic_blood_needed_location"
                android:drawableRight="@drawable/ic_blood_needed_location"
                android:hint="@string/register_txt_location"
                android:inputType="text" />

            <CheckBox
                android:id="@+id/agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen16"
                android:text="@string/register_txt_term"
                android:textColor="@color/fontDesc" />

            <Button
                android:id="@+id/btn_register"
                style="@style/CommonButtonWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_btn_register" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>