<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen24"
    android:background="@color/lightBlue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ThanksActivity">

    <TextView
        style="@style/CommonTextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen18"
        android:text="@string/verify_txt_header" />

    <TextView
        android:id="@+id/thanksWord"
        style="@style/CommonTextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/verify_txt_body" />

    <Button
        android:layout_marginTop="@dimen/dimen64"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_btn_txt"
        style="@style/CommonButtonBlue"/>

</LinearLayout>