<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/ic_header_profile" />

        <RelativeLayout
            android:id="@+id/cover_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen16">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_side_menu" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_notification" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/dimen100"
            android:layout_height="@dimen/dimen100"
            android:layout_below="@id/cover"
            android:layout_centerInParent="true"
            android:layout_marginTop="-50dp"
            android:background="@drawable/photo_frame"
            android:padding="18dp"
            android:src="@drawable/ic_profile_default_small" />

    </RelativeLayout>


    <TextView
        android:id="@+id/name"
        style="@style/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_txt_thanks" />

    <TextView
        android:id="@+id/bloodType"
        style="@style/SubHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_txt_blood_type" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1"
        android:layout_marginVertical="@dimen/dimen12"
        android:background="@color/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="75" />

            <TextView
                style="@style/SubHeader2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_blood_give" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="100" />

            <TextView
                style="@style/SubHeader2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_blood_received" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="330" />

            <TextView
                style="@style/SubHeader2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_thanks" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1"
        android:layout_marginVertical="@dimen/dimen12"
        android:background="@color/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen12"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen100"
                android:layout_height="@dimen/dimen100"
                android:src="@drawable/ic_search_donor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_search_donor"
                style="@style/HeaderIcon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_search_donor_sub"
                style="@style/BodyIcon"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen100"
                android:layout_height="@dimen/dimen100"
                android:src="@drawable/ic_blood_needed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_blood_needed"
                style="@style/HeaderIcon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_blood_needed_sub"
                style="@style/BodyIcon"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen12"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen100"
                android:layout_height="@dimen/dimen100"
                android:src="@drawable/ic_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_message"
                style="@style/HeaderIcon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_message_sub"
                style="@style/BodyIcon"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen100"
                android:layout_height="@dimen/dimen100"
                android:src="@drawable/ic_donor_history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_history"
                style="@style/HeaderIcon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_txt_history_sub"
                style="@style/BodyIcon"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>